clang/test/BSC/Negative/SafeZone/array_subscript_raw_pointer/array_subscript_raw_pointer.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// REQUIRES: ENABLE_BSC_FUTURE

// Test that both *ptr and ptr[0] are forbidden in safe zone for raw pointers
// Note: This feature requires ENABLE_BSC_FUTURE macro to be enabled.
_Safe void test(void) {
    int a = 0;
    int* ptr = _Unsafe(&a);

    // Both of these should be errors as they are equivalent operations
    *ptr = 1;   // expected-error {{'*' operator is forbidden in the safe zone}}
    ptr[0] = 1; // expected-error {{'[]' operator is forbidden in the safe zone}}
}

// Test that array access syntax is also forbidden for reading
_Safe void test2(void) {
    int arr[10] = {0};
    int* ptr = _Unsafe(&arr[0]);

    int val1 = *ptr;   // expected-error {{'*' operator is forbidden in the safe zone}}
    int val2 = ptr[0]; // expected-error {{'[]' operator is forbidden in the safe zone}}
    int val3 = ptr[5]; // expected-error {{'[]' operator is forbidden in the safe zone}}
}
